@@ -4,6 +4,8 @@ Changes in version 1.18
 - Added support for running Dovecot IMAP from imapfront-auth.
   See imapfront.html for details on how to set this up.
 
+- Moved more trivial plugins into builtins.
+
 Development of this version has been sponsored by FutureQuest, Inc.
 ossi@FutureQuest.net  http://www.FutureQuest.net/
 -------------------------------------------------------------------------------
